--- a/src/styles/user-interface/project-display.css
+++ b/src/styles/user-interface/project-display.css
@@ -1,4 +1,4 @@
-@import './../styles.css';
+@import 'styles/styles.css';
 
 .project-display {
     background-color: var(--light-grey-background-color);
