--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,6 +4,8 @@
     --dark-grey-background-color: #252525;
 
     --light-font-color: #e0e0e0;
+    --medium-font-color: #4d4d4d;
+    --dark-font-color: #252525;
 
     --dark-red-theme: #67000d;
     --black-theme: #252525;
