--- a/src/styles/pages/project-page/project-display/project-display.css
+++ b/src/styles/pages/project-page/project-display/project-display.css
@@ -1,5 +1,11 @@
 @import 'styles/styles.css';
 
 .project-display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-sizing: border-box;
+
     background-color: var(--light-grey-background-color);
 }
