added node chain visualization

--- a/src/styles/pages/project-page/project-display/recursive-piecing.css
+++ b/src/styles/pages/project-page/project-display/recursive-piecing.css
@@ -1,9 +1,13 @@
 @import 'styles/styles.css';
 
 .recursive-display-body {
+    position: relative;
+
     display: flex;
     justify-content: center;
     align-items: center;
+
+    flex-direction: column;
 
     margin: 0;
 
