added mouseover effect to nodes and lines

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,6 +8,7 @@
     --dark-font-color: #252525;
 
     --dark-red-theme: #67000d;
+    --red-theme: #cb181d;
     --black-theme: #252525;
     --grey-theme: #4d4d4d;
 }
