added project grid

--- a/src/styles/pages/project-page/project-grid/views.css
+++ b/src/styles/pages/project-page/project-grid/views.css
@@ -1,13 +1,13 @@
 @import 'styles/styles.css';
 
-.recursive-display-body {
-    position: relative;
-
+.views {
     display: flex;
+    min-width: 80vw;
+
     justify-content: center;
     align-items: center;
 
-    flex-direction: column;
+    min-height: 3vh;
 
-    margin: 0;
+    background-color: var(--grey-background-color);
 }
