checking in something broken so i don't lose anythong

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,6 +9,7 @@
 
     --dark-red-theme: #67000d;
     --red-theme: #cb181d;
+    --blue-theme: #3690c0;
     --black-theme: #252525;
     --grey-theme: #4d4d4d;
 }
