added buttons to start a new project and load a new project (they don't do anything)

--- a/crdnl/src/css/styles.css
+++ b/crdnl/src/css/styles.css
@@ -1,9 +1,13 @@
 :root {
     --dark-background-color: #252525;
     --background-color: #4d4d4d;
+    --accent-background-color: #67000d;
 
     --greyed-out-font-color: #969696;
     --font-color: #f0f0f0;
+
+    /* this matches the red in the cardinal logo */
+    --accent-color: #c41a21;
 }
 
 body {
