added dynamic sizing for minimap

--- a/crdnl/src/css/styles.css
+++ b/crdnl/src/css/styles.css
@@ -2,6 +2,7 @@
     --dark-background-color: #252525;
     --background-color: #4d4d4d;
     --accent-background-color: #67000d;
+    --project-display-background-color: #f0f0f0;
 
     --greyed-out-font-color: #969696;
     --font-color: #f0f0f0;
