added zoomable background image

--- a/crdnl/src/css/styles.css
+++ b/crdnl/src/css/styles.css
@@ -9,6 +9,10 @@
 
     /* this matches the red in the cardinal logo */
     --accent-color: #c41a21;
+
+    --small-font-size: 1;
+    --font-size: 2;
+    --large-font-size: 5;
 }
 
 body {
