added color and size options for the recursive piecing node

--- a/crdnl/src/css/styles.css
+++ b/crdnl/src/css/styles.css
@@ -10,6 +10,8 @@
     /* this matches the red in the cardinal logo */
     --accent-color: #c41a21;
 
+    --black: #000000;
+
     --small-font-size: 1;
     --font-size: 2;
     --large-font-size: 5;
