added panels into django db

--- a/crdnl/src/css/styles.css
+++ b/crdnl/src/css/styles.css
@@ -11,6 +11,8 @@
     --accent-color: #c41a21;
 
     --black: #000000;
+    --red: #c41a21;
+    --blue: #1f78b4;
 
     --small-font-size: 1;
     --font-size: 2;
